--- a/helpdesk/templates/admin_template/admin_home.html
+++ b/helpdesk/templates/admin_template/admin_home.html
@@ -349,7 +349,7 @@
                                 <li class="app-sidebar__heading">
                                     {{ user.first_name }} - 
                                    
-                                        Admin
+                                    Customer Supportive
                                 </li>
                                 <li>
                                     <a href="{% url 'admin_home' %}" class="mm-active">
