--- a/helpdesk/templates/admin_template/manage_tickets_admin.html
+++ b/helpdesk/templates/admin_template/manage_tickets_admin.html
@@ -31,7 +31,7 @@
                             </thead>
                             <tbody>
                                 {% for ticket in tickets %}
-                                <tr>
+                                <tr class="{{ ticket.color_class }}">
                                     <td>{{ ticket.id }}</td>
                                     <td>{{ ticket.title }}</td>
                                     <td>{{ ticket.description|slice:":50" }}{% if ticket.description|length > 50 %}...{% endif %}</td>
